# helloworlcpp

./: .gitignore  README.md  helloworldcpp.7z
cmake/: xxxConfig.cmake
cmake/module/: NewTargetLibrary.cmake  PrintTargetProperties.cmake
cmake/module/configure/: TargetLibraryConfig.cmake.in
install/xxx/include/xxx/bar/: bar.h
install/xxx/lib/: bar.lib  foo.lib
install/xxx/lib/cmake/: barTargets-debug.cmake
install/yyy/include/yyy/spam/: spam.h
install/yyy/lib/: spam.lib
install/yyy/lib/cmake/: spamConfig.cmake  spamTargets-debug.cmake  spamTargets.cmake
xxx/: CmakeLists.txt
xxx/app/: CmakeLists.txt
xxx/app/src/: main.cpp
xxx/cmake/: xxxConfig.cmake
xxx/lib/: CMakeLists.txt
xxx/lib/bar/: CMakeLists.txt
xxx/lib/bar/cmake/: barConfig.cmake
xxx/lib/bar/include/xxx/bar/: bar.h
xxx/lib/bar/src/: bar.cpp
xxx/lib/foo/: CMakeLists.txt
xxx/lib/foo/cmake/: fooConfig.cmake
xxx/lib/foo/include/xxx/foo/: foo.h
xxx/lib/foo/src/: foo.cpp
yyy/: CmakeLists.txt
yyy/app/: CmakeLists.txt
yyy/app/src/: main.cpp
yyy/cmake/: yyyConfig.cmake
yyy/lib/: CMakeLists.txt
yyy/lib/foo/: CMakeLists.txt
yyy/lib/foo/include/yyy/foo/: foo.h
yyy/lib/foo/src/: foo.cpp
yyy/lib/spam/: CMakeLists.txt
yyy/lib/spam/include/yyy/spam/: spam.h
yyy/lib/spam/src/: spam.cpp
